--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab"
+    android:layout_height="match_parent" >
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabTextColor="@android:color/white"
-        app:tabSelectedTextColor="#00ff00"
-        app:tabBackground="@color/colorPrimaryDark"
-        app:tabTextAppearance="@android:style/TextAppearance.Large"
-        app:tabMode="scrollable"
-        app:tabIndicatorColor="#00ff00"/>
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary" />
 
-</LinearLayout>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            app:tabTextColor="@android:color/white"
+            app:tabSelectedTextColor="#00ff00"
+            app:tabBackground="@color/colorPrimaryDark"
+            app:tabTextAppearance="@android:style/TextAppearance.Small"
+            app:tabMode="fixed"
+            app:tabPadding="@dimen/dimen_5"
+            app:tabIndicatorHeight="0dp"/>
+        <!--<android.support.design.widget.TabLayout-->
+        <!--android:id="@+id/tab"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--app:tabTextColor="@android:color/white"-->
+        <!--app:tabSelectedTextColor="#00ff00"-->
+        <!--app:tabBackground="@color/colorPrimaryDark"-->
+        <!--app:tabTextAppearance="@android:style/TextAppearance.Small"-->
+        <!--app:tabMode="fixed"-->
+        <!--app:tabIndicatorColor="#00ff00"/>-->
+
+    </LinearLayout>
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/nav_header_layout"
+        app:menu="@menu/main_nav_view_menu">
+
+    </android.support.design.widget.NavigationView>
+
+</android.support.v4.widget.DrawerLayout>
