--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-    <LinearLayout
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true" >
+    <include
+        layout="@layout/activity_main_app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+<!--    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -15,34 +20,19 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary" />
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tab"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            app:tabTextColor="@android:color/white"
-            app:tabSelectedTextColor="#00ff00"
-            app:tabBackground="@color/colorPrimaryDark"
-            app:tabTextAppearance="@android:style/TextAppearance.Small"
-            app:tabMode="fixed"
-            app:tabPadding="@dimen/dimen_5"
-            app:tabIndicatorHeight="0dp"/>
-        <!--<android.support.design.widget.TabLayout-->
-        <!--android:id="@+id/tab"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--app:tabTextColor="@android:color/white"-->
-        <!--app:tabSelectedTextColor="#00ff00"-->
-        <!--app:tabBackground="@color/colorPrimaryDark"-->
-        <!--app:tabTextAppearance="@android:style/TextAppearance.Small"-->
-        <!--app:tabMode="fixed"-->
-        <!--app:tabIndicatorColor="#00ff00"/>-->
 
-    </LinearLayout>
+        &lt;!&ndash;<android.support.design.widget.TabLayout&ndash;&gt;
+        &lt;!&ndash;android:id="@+id/tab"&ndash;&gt;
+        &lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;
+        &lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;
+        &lt;!&ndash;app:tabTextColor="@android:color/white"&ndash;&gt;
+        &lt;!&ndash;app:tabSelectedTextColor="#00ff00"&ndash;&gt;
+        &lt;!&ndash;app:tabBackground="@color/colorPrimaryDark"&ndash;&gt;
+        &lt;!&ndash;app:tabTextAppearance="@android:style/TextAppearance.Small"&ndash;&gt;
+        &lt;!&ndash;app:tabMode="fixed"&ndash;&gt;
+        &lt;!&ndash;app:tabIndicatorColor="#00ff00"/>&ndash;&gt;
+
+    </LinearLayout>-->
     <android.support.design.widget.NavigationView
         android:id="@+id/navigationView"
         android:layout_width="wrap_content"
