--- a/app/src/main/res/layout/fragment_index.xml
+++ b/app/src/main/res/layout/fragment_index.xml
@@ -9,13 +9,15 @@
         <ListView
             android:id="@+id/lvMenu"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></ListView>
+            android:layout_height="match_parent">
+
+        </ListView>
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="IndexFragment" />
+    <!--&lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;-->
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="IndexFragment" />-->
 
 </FrameLayout>
