--- a/app/src/main/res/layout/activity_main_app_bar.xml
+++ b/app/src/main/res/layout/activity_main_app_bar.xml
@@ -8,7 +8,7 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
@@ -16,16 +16,29 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
+            app:layout_collapseMode="pin"
             app:popupTheme="@style/AppTheme.PopupOverlay" >
             <TextView
                 android:id="@+id/title"
                 style="@style/title"
                 tools:text="文字居中" />
         </android.support.v7.widget.Toolbar>
-        <include layout="@layout/activity_main_content" />
+
+        <!--<android.support.v7.widget.Toolbar-->
+            <!--android:id="@+id/toolbar"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="?attr/actionBarSize"-->
+            <!--android:background="?attr/colorPrimary"-->
+            <!--app:popupTheme="@style/AppTheme.PopupOverlay" >-->
+            <!--<TextView-->
+                <!--android:id="@+id/title"-->
+                <!--style="@style/title"-->
+                <!--tools:text="文字居中" />-->
+        <!--</android.support.v7.widget.Toolbar>-->
+
     </android.support.design.widget.AppBarLayout>
-
-
+    <include
+        layout="@layout/activity_main_content" />
 
 <!--    <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
