--- a/app/src/main/res/layout/fragment_index.xml
+++ b/app/src/main/res/layout/fragment_index.xml
@@ -3,16 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.gzticc.pincommon.ui.fragment.IndexFragment">
-    <android.support.v4.widget.SwipeRefreshLayout
+    <!--<android.support.v4.widget.SwipeRefreshLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
+       <!---->
+    <!--</android.support.v4.widget.SwipeRefreshLayout>-->
+
+    <ListView
+        android:id="@+id/lvMenu"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <ListView
-            android:id="@+id/lvMenu"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-        </ListView>
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </ListView>
 
     <!--&lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;-->
     <!--<TextView-->
